--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit==1.38.0
+streamlit>=1.32,<2
 pandas==2.2.2
-openpyxl==3.1.5
+# numpy 1.26.x é estável para wheels e funciona com pandas 2.2.x
 numpy==1.26.4
+openpyxl>=3.1,<4
